--- a/src/app/authentication/register/user-register/user-register.component.html
+++ b/src/app/authentication/register/user-register/user-register.component.html
@@ -3,7 +3,7 @@
   <h3 class="register-title">New user</h3>
   <label>Please provide us with some information about yourself.</label>
 
-  <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="register-form">
+  <form [formGroup]="registerForm"  class="register-form">
     <div class="form-grid">
       <!-- First Column of Inputs -->
       <div class="form-column">
@@ -109,9 +109,9 @@
 
 
     <div class="button-group">
-      <button mat-raised-button class="back-button" routerLink="/register">BACK</button>
+<!--      <button mat-raised-button class="back-button" routerLink="/register">BACK</button>-->
 
-      <button mat-raised-button class="register-button" type="submit">REGISTER</button>
+      <button mat-raised-button class="register-button" (click)="onSubmit()" type="submit">REGISTER</button>
 
     </div>
 
