[FIX] - Fix error when canceling pup data editing

--- a/src/app/profile/edit-company-information/edit-company-information.component.html
+++ b/src/app/profile/edit-company-information/edit-company-information.component.html
@@ -41,6 +41,6 @@
   </form>
 </mat-dialog-content>
 <mat-dialog-actions class="actions-container">
-  <button mat-raised-button mat-dialog-close class="cancel-button" (click)="cancel()">CANCEL</button>
+  <button mat-raised-button mat-dialog-close class="cancel-button" >CANCEL</button>
   <button mat-raised-button class="primary-button" (click)="onSubmit()" >SAVE CHANGES</button>
 </mat-dialog-actions>
