[ADD] - Add disabling of profile deletion for organizers who have upcoming events

--- a/src/app/profile/confirm-deactivation/confirm-deactivation.component.html
+++ b/src/app/profile/confirm-deactivation/confirm-deactivation.component.html
@@ -1,11 +1,22 @@
 <div class="confirmation-dialog">
-  <h6>Are you sure you want to deactivate your account?</h6>
-  <p>This action can't be undone.</p>
+  <div *ngIf="isDeletable">
+    <h6>Are you sure you want to deactivate your account?</h6>
+    <p>This action can't be undone.</p>
 
-  <div class="dialog-buttons">
-    <button mat-button class="go-back-button" (click)="onCancel()">GO BACK</button>
-    <button mat-raised-button class="deactivate-button" (click)="onConfirm()">
-      YES, DEACTIVATE
-    </button>
+    <div class="dialog-buttons">
+      <button mat-button class="go-back-button" (click)="onCancel()">GO BACK</button>
+      <button mat-raised-button class="deactivate-button" (click)="onConfirm()">
+        YES, DEACTIVATE
+      </button>
+    </div>
+  </div>
+
+
+  <div *ngIf="!isDeletable">
+    <h6>{{this.errorMessage}}</h6>
+
+    <div class="dialog-buttons">
+      <button mat-button class="go-back-button" (click)="onCancel()">GO BACK</button>
+    </div>
   </div>
 </div>
