--- a/src/app/solutions/pupservice-product-management/pupservice-product-management.component.html
+++ b/src/app/solutions/pupservice-product-management/pupservice-product-management.component.html
@@ -2,9 +2,15 @@
   <mat-tab label="Products">
   </mat-tab>
   <mat-tab label="Services" >
-    <app-pupservice-management></app-pupservice-management>
+    <app-pupservice-management
+      #services
+      (serviceChanged)="refreshPrices()"
+    ></app-pupservice-management>
   </mat-tab>
   <mat-tab label="Price List">
-    <app-price-list-management></app-price-list-management>
+    <app-price-list-management
+      #prices
+      (priceChanged)="refreshServices()"
+    ></app-price-list-management>
   </mat-tab>
 </mat-tab-group>
