--- a/src/app/solutions/solution-page/solution-page.component.html
+++ b/src/app/solutions/solution-page/solution-page.component.html
@@ -11,7 +11,7 @@
           >
             <ng-template pTemplate="item" let-image>
               <div class="carousel-item">
-                <img [src]="image">
+                <img [src]="environment.apiImagesHost+image">
               </div>
             </ng-template>
           </p-carousel>
@@ -64,7 +64,7 @@
 
   <div class="reviews">
     <div class="review" *ngFor="let comment of solution.comments" [id]="comment.id">
-      <img [src]="comment.author.profilePicture" alt="User profile" />
+      <img [src]="environment.apiImagesHost+comment.author.profilePicture" alt="User profile" />
       <div class="review-content">
         <strong>{{ comment.author.name }} {{ comment.author.surname }}</strong>
         <p>{{ comment.content }}</p>
