[ADD] - Add image handling for service creation and edit

--- a/src/app/authentication/register/organizer-register/organizer-register.component.css
+++ b/src/app/authentication/register/organizer-register/organizer-register.component.css
@@ -127,13 +127,13 @@ mat-form-field {
 }
 
 
-.image-preview {
+.images-preview {
   position: relative;
   display: inline-block;
   margin-top: 1em;
 }
 
-.image-preview img {
+.images-preview img {
   max-width: 150px;
   border-radius: 8px;
   border: 1px solid var(--secondary-color);
