--- a/src/app/authentication/upgrading/congradulation/congradulation.component.html
+++ b/src/app/authentication/upgrading/congradulation/congradulation.component.html
@@ -1,11 +1,13 @@
 <div class="confirmation-dialog">
   <div>
     <h6>Congratulations!!!</h6>
-    <p>You achieved to become someone who organizes events!</p>
+    <p>You achieved to become someone who organizes events!
+        Please log out and log in again.
+        Thank you for using EventHopper!!!</p>
 
 
     <div class="dialog-buttons">
-      <button mat-button class="go-back-button" (click)="onOk()">OK, I GOT IT!</button>
+      <button mat-button class="button" (click)="onOk()">OK, LOG OUT NOW!</button>
     </div>
   </div>
 
