[FIX] - Fix api endpoints

--- a/src/app/solutions/solution-page/solution-page.component.html
+++ b/src/app/solutions/solution-page/solution-page.component.html
@@ -21,7 +21,7 @@
       <div class="product-details">
         <div class="header">
           <h1>{{solution.name}}</h1>
-          <mat-icon [ngClass]="{'filled': solution.isFavorite}" (click)="toggleFavorites()" *ngIf="user?.id">star</mat-icon>
+          <mat-icon [ngClass]="{'filled': solution.favorite}" (click)="toggleFavorites()" *ngIf="user?.id">star</mat-icon>
         </div>
         <p>
          {{solution.description}}
