--- a/src/app/profile/profile-calendar/profile-calendar.component.css
+++ b/src/app/profile/profile-calendar/profile-calendar.component.css
@@ -3,10 +3,16 @@ body {
   padding: 20px;
 }
 
+
 .calendar {
   margin-bottom: 50px;
 }
 
+h6{
+  color: var(--font-dark-blue);
+  margin-left: 2em;
+  font-size: medium;
+}
 
 h3 {
   color: var(--font-dark-blue);
@@ -57,8 +63,6 @@ h3 {
   background: var(--secondary-color);
 }
 
-
-
 .btn.active {
   background: var(--primary-color);
   color: white;
@@ -108,7 +112,6 @@ h3 {
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 20px;
 }
 
 .col-md-4 {
