[ADD] - Add event type editing

--- a/src/app/admin-dashboard/eventTypes/admin-event-types-management/admin-event-types-management.component.html
+++ b/src/app/admin-dashboard/eventTypes/admin-event-types-management/admin-event-types-management.component.html
@@ -29,7 +29,7 @@
       </ng-container>
 
       <!-- Suggested Categories Column -->
-      <ng-container matColumnDef="suggestedSolutionCategories">
+      <ng-container matColumnDef="suggestedCategories">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Suggested Categories </th>
         <td mat-cell *matCellDef="let element">
           {{ getCategoryNames(element.suggestedCategories) }}
