--- a/src/app/admin-dashboard/eventTypes/admin-event-types-management/admin-event-types-management.component.html
+++ b/src/app/admin-dashboard/eventTypes/admin-event-types-management/admin-event-types-management.component.html
@@ -25,7 +25,7 @@
 
       <ng-container matColumnDef="active">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Active </th>
-        <td mat-cell *matCellDef="let element"> {{ element.isDeactivated ? 'No' : 'Yes' }} </td>
+        <td mat-cell *matCellDef="let element"> {{ element.deactivated ? 'No' : 'Yes' }} </td>
       </ng-container>
 
       <!-- Suggested Categories Column -->
@@ -41,10 +41,10 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef class="actions-header"> Actions </th>
         <td mat-cell *matCellDef="let element" class="actions-cell">
-          <button mat-icon-button (click)="edit(element)" [disabled]="element.isDeactivated" [ngStyle]="{ color: element.isDeactivated ? 'var(--disabled-color)' : 'var(--primary-color)'}">
+          <button mat-icon-button (click)="edit(element)" [disabled]="element.deactivated" [ngStyle]="{ color: element.deactivated ? 'var(--disabled-color)' : 'var(--primary-color)'}">
             <mat-icon>edit</mat-icon>
           </button>
-          <button mat-icon-button [disabled]="element.isDeactivated" (click)="remove(element)" [ngStyle]="{ color: element.isDeactivated ? 'var(--disabled-color)' : 'var(--error-color)' }">
+          <button mat-icon-button [disabled]="element.deactivated" (click)="remove(element)" [ngStyle]="{ color: element.deactivated ? 'var(--disabled-color)' : 'var(--error-color)' }">
             <mat-icon>delete</mat-icon>
           </button>
         </td>
