--- a/src/app/authentication/register/organizer-register/organizer-register.component.html
+++ b/src/app/authentication/register/organizer-register/organizer-register.component.html
@@ -18,6 +18,9 @@
           <input matInput placeholder="Email" formControlName="email" />
           <mat-error *ngIf="registerForm.get('email')?.hasError('required')">Email is required</mat-error>
           <mat-error *ngIf="registerForm.get('email')?.hasError('email')">Invalid email format</mat-error>
+          <mat-error *ngIf="registerForm.get('email')?.hasError('emailTaken')">
+            This email is already taken.
+          </mat-error>
         </mat-form-field>
 
         <mat-form-field appearance="fill">
