--- a/src/app/authentication/register/pup-register/pup-register.component.html
+++ b/src/app/authentication/register/pup-register/pup-register.component.html
@@ -27,6 +27,9 @@
             <mat-error *ngIf="registerForm.get('email')?.hasError('email')">
               Invalid email format
             </mat-error>
+            <mat-error *ngIf="registerForm.get('email')?.hasError('emailTaken')">
+              This email is already taken.
+            </mat-error>
           </mat-form-field>
 
           <mat-form-field appearance="fill">
