--- a/src/app/event/event-card/event-card.component.html
+++ b/src/app/event/event-card/event-card.component.html
@@ -8,6 +8,6 @@
       <p>{{event.description}}</p>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-flat-button>View More</button>
+      <button mat-flat-button (click) = "viewMore(event.id)">View More</button>
     </mat-card-actions>
   </mat-card>
