--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -77,9 +77,9 @@
 
       <mat-form-field appearance="fill" class="filter-field">
         <mat-label>Location</mat-label>
-        <mat-select formControlName="location">
-          <mat-option *ngFor="let location of locations" [value]="location">
-            {{ location.city }}
+        <mat-select formControlName="city">
+          <mat-option *ngFor="let city of cities" [value]="city">
+            {{ city }}
           </mat-option>
         </mat-select>
       </mat-form-field>
@@ -96,7 +96,7 @@
 
       <mat-form-field>
         <mat-label>Choose a date</mat-label>
-        <input (dateChange)="OnDateChange($event)" matInput [matDatepicker]="picker" >
+        <input #dateInput (dateChange)="OnDateChange($event)" matInput [matDatepicker]="picker" >
         <mat-hint>MM/DD/YYYY</mat-hint>
         <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
@@ -225,7 +225,7 @@
       </section>
 
 
-      <mat-radio-group aria-label="Sort by">
+      <mat-radio-group #solutionRadioGroup aria-label="Sort by">
         <mat-label>Sort by</mat-label>
         <mat-radio-button value="price" (change)="solutionRadioChange($event,solutionSort)">Price</mat-radio-button>
         <mat-radio-button value="name" (change)="solutionRadioChange($event,solutionSort)">Name</mat-radio-button>
