--- a/src/app/event/event-single-page/event-single-page.component.html
+++ b/src/app/event/event-single-page/event-single-page.component.html
@@ -1,24 +1,25 @@
-<div class="event-container">
+<div class="event-container" *ngIf="!notFound && loaded">
   <!-- Top Section -->
   <div class="top-section">
     <img [src]="image" alt="Event cover image" class="event-image" />
     <div class="event-details">
-      <h1>{{ this.eventDetails.name }}</h1>
+      <div class="header">
+        <h1>{{ this.eventDetails.name }}</h1>
+        <mat-icon [ngClass]="{'filled': eventDetails.favorite}" (click)="toggleFavorites()" *ngIf="user?.id">star</mat-icon>
+      </div>
+
       <p>
         {{ this.eventDetails.description }}
-        Kontig Tech Meetup is a dynamic gathering designed to inspire, connect, and empower technology enthusiasts, professionals, and innovators. This event brings together a vibrant community to exchange ideas, showcase cutting-edge advancements, and explore the latest trends in the tech world.
-
-        Attendees can dive into engaging talks and panel discussions led by industry experts, covering a wide array of topics from software development and AI innovations to emerging technologies and startup success stories. The meetup also offers interactive workshops and hands-on sessions.
       </p>
       <div class="action-buttons">
-        <button mat-button color="primary"  *ngIf="organizerLoggedIn" id="inviteBtn" (click) = "openInviteModal()">Invite People</button>
+        <button mat-button color="primary"  *ngIf="eventDetails.eventOrganizerLoggedIn" id="inviteBtn" (click) = "openInviteModal()">Invite People</button>
         <button mat-button id="exportBtn" (click) = "exportToPDF()">Export to PDF</button>
       </div>
     </div>
   </div>
 
   <!-- Banner Section -->
-  <div class="info-banner">
+  <div class="info-banner"  *ngIf="!notFound && loaded">
     <div>
       <h3>{{this.location}}</h3>
     </div>
@@ -32,7 +33,16 @@
   </div>
 
   <!-- Map Section -->
-  <div class="map-container">
+  <div class="map-container"  *ngIf="!notFound && loaded">
     <p height="300px" width="100%"></p>
+  </div>
+
+
+  <div class="loading-message" *ngIf="!loaded">
+    <p>We were unable to find that event.</p>
+  </div>
+
+  <div class="error-message" *ngIf="notFound && loaded">
+    <p>We were unable to find that event.</p>
   </div>
 </div>
