--- a/src/app/solutions/service-card/service-card.component.html
+++ b/src/app/solutions/service-card/service-card.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <img mat-card-image src="https://via.placeholder.com/300x200">
+    <img mat-card-image [src]="environment.apiImagesHost + service.pictures[0]">
     <mat-card-header>
       <mat-card-title>{{service.name}}</mat-card-title>
     </mat-card-header>
