--- a/src/app/view-my-events/create-event/create-event.component.html
+++ b/src/app/view-my-events/create-event/create-event.component.html
@@ -32,6 +32,33 @@
           </mat-form-field>
 
 
+          <mat-form-field>
+            <mat-label>Choose a date</mat-label>
+            <input
+              #dateInput
+              matInput
+              [matDatepicker]="picker"
+              [min]="today"
+              formControlName="date">
+            <mat-hint>MM/DD/YYYY</mat-hint>
+            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+            <mat-error *ngIf="eventForm.get('date')?.hasError('required')">
+              Date is required.
+            </mat-error>
+            <mat-error *ngIf="eventForm.get('date')?.hasError('matDatepickerMin')">
+              Date cannot be in the past.
+            </mat-error>
+          </mat-form-field>
+
+
+          <mat-radio-group aria-label="The privacy of the event is: "   [value]="'public'">
+            <mat-label>Privacy: </mat-label>
+            <mat-radio-button value="public" (change)="eventRadioChange($event)">Public</mat-radio-button>
+            <mat-radio-button value="private" (change)="eventRadioChange($event)" >Private</mat-radio-button>
+          </mat-radio-group>
+
+
           <mat-form-field appearance="fill">
             <mat-label>Description</mat-label>
             <textarea matInput placeholder="Description" formControlName="description"></textarea>
@@ -62,6 +89,18 @@
           </mat-form-field>
 
 
+          <mat-form-field appearance="fill" class="filter-field">
+            <mat-label>Event type</mat-label>
+            <mat-select formControlName="eventTypes" multiple>
+              <mat-option *ngFor="let eventType of allEventTypes" [value]="eventType">
+                {{ eventType.name }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+
+
+
+
           <div class="form-column">
             <div class="profile-pic">
               <input type="file" id="profilePic" (change)="onImageSelected($event)" style="display: none;" accept="image/*" />
@@ -89,29 +128,6 @@
       <div class="form-grid">
         <!-- First Column of Inputs -->
         <div class="form-column">
-          <mat-form-field appearance="fill">
-            <mat-label>Email</mat-label>
-            <input matInput placeholder="Company Email" formControlName="companyEmail" />
-            <mat-error *ngIf="eventForm.get('companyEmail')?.hasError('required')">
-              Email is required
-            </mat-error>
-            <mat-error *ngIf="eventForm.get('companyEmail')?.hasError('email')">
-              Invalid email format
-            </mat-error>
-          </mat-form-field>
-
-
-
-
-
-
-          <mat-form-field appearance="fill">
-            <mat-label>Phone Number</mat-label>
-            <input matInput placeholder="Phone Number" formControlName="companyPhoneNumber" type="number" />
-            <mat-error *ngIf="eventForm.get('companyPhoneNumber')?.hasError('required')">
-              Phone Number is required
-            </mat-error>
-          </mat-form-field>
 
 
 
@@ -120,37 +136,7 @@
 
         <!-- Second Column of Inputs -->
         <div class="form-column">
-          <mat-form-field appearance="fill">
-            <mat-label>Company Name</mat-label>
-            <input matInput placeholder="Company Name" formControlName="companyName" />
-            <mat-error *ngIf="eventForm.get('companyName')?.hasError('required')">
-              Company Name is required
-            </mat-error>
-          </mat-form-field>
 
-          <mat-form-field appearance="fill">
-            <mat-label>City</mat-label>
-            <input matInput placeholder="City" formControlName="companyCity" />
-            <mat-error *ngIf="eventForm.get('companyCity')?.hasError('required')">
-              City is required
-            </mat-error>
-          </mat-form-field>
-
-          <mat-form-field appearance="fill">
-            <mat-label>Address</mat-label>
-            <input matInput placeholder="Company Address" formControlName="companyAddress" />
-            <mat-error *ngIf="eventForm.get('companyAddress')?.hasError('required')">
-              Address is required
-            </mat-error>
-          </mat-form-field>
-
-          <mat-form-field appearance="fill">
-            <mat-label>Description</mat-label>
-            <textarea matInput placeholder="Description" formControlName="description"></textarea>
-            <mat-error *ngIf="eventForm.get('description')?.hasError('required')">
-              Description is required
-            </mat-error>
-          </mat-form-field>
 
 
 
