--- a/src/app/view-my-events/create-event/create-event.component.css
+++ b/src/app/view-my-events/create-event/create-event.component.css
@@ -15,6 +15,10 @@ mat-radio-group{
 
 }
 
+.error-image-message{
+  font-size: 12px;
+}
+
 
 mat-error {
   color: var(--error-color-lighter) !important;
@@ -191,5 +195,44 @@ mat-form-field {
   justify-content: start;
   gap: 10px;
 }
+mat-card-title {
+  font-size: 18px;
+  color: var(--font-dark-blue);
+  text-align: center;
+}
 
+mat-card-subtitle {
+  font-size: 12px;
+  color: var(--font-dark-blue);
+  text-align: center;
+}
 
+mat-card-content {
+  font-size: 12px;
+  color: var(--font-dark-blue);
+}
+
+.activity-card p {
+  margin: 0;
+  padding: 0;
+}
+
+.activity-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative; /* Allows the button to be positioned independently */
+}
+
+.header-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.remove-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: red;
+}
