[ADD] - Remove deactivated event types, finish collecting data for event creation

--- a/src/app/view-my-events/create-event/create-event.component.html
+++ b/src/app/view-my-events/create-event/create-event.component.html
@@ -167,6 +167,12 @@
               <mat-error *ngIf="agendaForm.get('endTime')?.hasError('required')">
                 End time is required
               </mat-error>
+              <mat-error *ngIf="agendaForm.get('endTime')?.hasError('invalidTimeRange')">
+                End time must be after start time.
+              </mat-error>
+              <mat-error *ngIf="agendaForm.get('endTime')?.hasError('overlappingTime')">
+                This time range overlaps with an existing activity.
+              </mat-error>
             </mat-form-field>
 
             <button mat-raised-button color="primary" type="submit">
