--- a/src/app/solutions/solution-page/solution-page.component.css
+++ b/src/app/solutions/solution-page/solution-page.component.css
@@ -63,6 +63,15 @@
   font-size: 2em;
 }
 
+.review-btn {
+  font-weight: normal;
+  background-color: var(--secondary-color) !important;
+  color: white !important;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  display: flex;
+  margin-bottom: 1.2em;
+}
 
 .chat-btn {
   font-weight: normal;
