--- a/src/app/profile/profile-page/profile.component.css
+++ b/src/app/profile/profile-page/profile.component.css
@@ -38,7 +38,9 @@ h3 {
 }
 
 
-
+.edit-icon {
+  cursor: pointer;
+}
 
 .buttons-section {
   gap: 0.8em; /* Adds spacing between buttons */
@@ -84,4 +86,46 @@ h3 {
 
 mat-tab-group{
   background-color: white !important;
+}
+
+::ng-deep .p-carousel-content {
+  position: relative;
+  width: 100%;
+}
+
+::ng-deep .p-carousel-next,
+::ng-deep .p-carousel-prev {
+  background-color: var(--font-dark-blue);
+  width: 2.5em;
+  height: 2.5em;
+  color: white;
+  border-radius: 50%;
+  font-size: 1rem;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 1;
+}
+
+::ng-deep .p-carousel-prev {
+  left: 0.5em; /* Adjust spacing from the left */
+}
+
+::ng-deep .p-carousel-next {
+  right: 0.5em; /* Adjust spacing from the right */
+}
+
+.carousel-item {
+  max-height: 30em;
+  width: 100%;
+  overflow: hidden;
+}
+
+.carousel-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensures the image fills its container */
 }
