--- a/src/app/profile/profile-page/profile.component.html
+++ b/src/app/profile/profile-page/profile.component.html
@@ -9,16 +9,24 @@
       <div class="profile-picture-section">
 
         <img [src]="this.profilePicture" alt="Profile Picture" class="profile-picture" />
-        <button mat-raised-button class="btn"
+        <input type="file" id="profilePic" (change)="onFileSelected($event)" style="display: none;"  accept="image/*"/>
+        <button mat-raised-button class="btn" type="button" (click)="triggerFileInput()"
                 [ngClass]="{ 'btn-pup': user.role === 'SERVICE_PROVIDER' }">CHANGE PROFILE PICTURE</button>
 
+        <button mat-raised-button class="btn deactivate-account"
+                [ngClass]="{ 'btn-pup': user.role === 'SERVICE_PROVIDER' }"
+                *ngIf="this.user.role === 'SERVICE_PROVIDER'" (click)="openConfirmationDialog()">DEACTIVATE ACCOUNT</button>
 
       </div>
 
       <!-- Card 2: Regular Text -->
       <div class="user-information-card">
         <div class = "information">
-          <h5>Personal information</h5>
+          <h5>Personal information
+            <mat-icon
+              class="edit-icon"
+              (click)="openEditAccountInformation()">edit</mat-icon>
+          </h5>
 
           <p><strong>Name:</strong> {{user.name}} {{user.surname}}</p>
           <p><strong>Email:</strong> {{user.email}}</p>
@@ -27,57 +35,62 @@
         </div>
         <button mat-raised-button class="btn"
                 [ngClass]="{ 'btn-pup': user.role === 'SERVICE_PROVIDER' }"
-                *ngIf="user.role != 'ADMIN'"
-                (click)="openEditAccountInformation()">EDIT INFORMATION</button>
-      </div>
-
-
-      <!-- Card Extra PUP text -->
-      <div class="company-information-card" *ngIf="user.role === 'SERVICE_PROVIDER'">
-        <div class = "information">
-          <h5>Company</h5>
-          <p><strong>Name:</strong> {{user.companyName}}</p>
-          <p><strong>Email:</strong> {{user.companyEmail}}</p>
-          <p><strong>Phone:</strong> +{{user.companyPhoneNumber}}</p>
-          <p><strong>Address:</strong> {{user.companyLocation.address}}, {{user.companyLocation.city}}</p>
-        </div>
-        <button mat-raised-button class="btn"
-                [ngClass]="{ 'btn-pup': user.role === 'SERVICE_PROVIDER' }"
-                (click)="openEditCompanyInformation()">EDIT INFORMATION</button>
-      </div>
-
-
-      <!-- Card Extra PUP description -->
-      <div class="company-information-card" *ngIf="user.role === 'SERVICE_PROVIDER'">
-        <div class = "information">
-          <p><strong>Description:</strong> {{user.companyDescription}}</p>
-        </div>
-
-        <button mat-raised-button class="btn"
-                [ngClass]="{ 'btn-pup': user.role === 'SERVICE_PROVIDER' }"
                 (click)="openChangePasswordDialog()"
                 *ngIf="this.user.role === 'SERVICE_PROVIDER'">CHANGE PASSWORD</button>
 
 
-        <button *ngIf="this.user.role === 'SERVICE_PROVIDER'"
-                mat-raised-button class="btn"
-                [ngClass]="{ 'btn-pup': user.role === 'SERVICE_PROVIDER' }"
-                [routerLink]="'/my-solutions'">VIEW MY SOLUTIONS</button>
+      </div>
 
 
-        <button mat-raised-button class="btn deactivate-account"
-                [ngClass]="{ 'btn-pup': user.role === 'SERVICE_PROVIDER' }"
-                *ngIf="this.user.role === 'SERVICE_PROVIDER'" (click)="openConfirmationDialog()">DEACTIVATE ACCOUNT</button>
+      <!-- Card 3 -->
+      <div class="company-information-card" *ngIf="user.role === 'SERVICE_PROVIDER'">
+        <div class = "information">
+          <h5>Company
+            <mat-icon
+              class="edit-icon"
+              (click)="openEditCompanyInformation()">edit</mat-icon>
+          </h5>
+          <p><strong>Name:</strong> {{user.companyName}}</p>
+          <p><strong>Email:</strong> {{user.companyEmail}}</p>
+          <p><strong>Phone:</strong> +{{user.companyPhoneNumber}}</p>
+          <p><strong>Address:</strong> {{user.companyLocation.address}}, {{user.companyLocation.city}}</p>
+          <p><strong>Description:</strong> {{user.companyDescription}}</p>
+        </div>
+
 
       </div>
 
 
+      <!-- Card 4 -->
+      <div class="company-information-card" *ngIf="user.role === 'SERVICE_PROVIDER'">
+        <p-carousel *ngIf="this.user.role == 'SERVICE_PROVIDER'"
+                    [value]="user.companyPhotos"
+                    [numVisible]="1"
+                    [showIndicators]="false"
+                    [circular]="true"
+                    [autoplayInterval]="5000"
+        >
+          <ng-template pTemplate="item" let-image>
+            <div class="carousel-item">
+              <img [src]="environment.apiImagesHost+image">
+            </div>
+          </ng-template>
+        </p-carousel>
 
-      <!-- Card 3: Text and Buttons  and pup image carousel-->
-      <div class="buttons-section">
+
         <button mat-raised-button class="btn"
-                *ngIf="user.role === 'ADMIN'"
-                (click)="openEditAccountInformation()">EDIT INFORMATION</button>
+                [ngClass]="{ 'btn-pup': user.role === 'SERVICE_PROVIDER' }"
+                *ngIf="this.user.role === 'SERVICE_PROVIDER'">MANAGE PHOTOS</button>
+        <button *ngIf="this.user.role === 'SERVICE_PROVIDER'"
+                mat-raised-button class="btn"
+                [ngClass]="{ 'btn-pup': user.role === 'SERVICE_PROVIDER' }"
+                [routerLink]="'/my-solutions'">VIEW MY SOLUTIONS</button>
+      </div>
+
+
+
+      <!-- Card 5: Text and Buttons  and pup image carousel-->
+      <div class="buttons-section" *ngIf="user.role != 'SERVICE_PROVIDER'">
 
         <button mat-raised-button class="btn"
                 [ngClass]="{ 'btn-pup': user.role === 'SERVICE_PROVIDER' }"
@@ -93,7 +106,6 @@
                 [routerLink]="'/admin-dashboard'">ADMIN DASHBOARD</button>
 
 
-
         <button mat-raised-button class="btn"
                 *ngIf="this.user.role === 'EVENT_ORGANIZER'" (click)="openViewMyEvents()">VIEW MY EVENTS</button>
 
@@ -103,9 +115,6 @@
 
 
 
-        <button mat-raised-button class="btn"
-                [ngClass]="{ 'btn-pup': user.role === 'SERVICE_PROVIDER' }"
-                *ngIf="this.user.role === 'SERVICE_PROVIDER'">MANAGE PHOTOS</button>
 
       </div>
     </div>
